--- a/assets/html/blog.html
+++ b/assets/html/blog.html
@@ -8,7 +8,10 @@
   <link rel="stylesheet" href="../css/blog.css">
   <link rel="stylesheet" href="../css/header.css">
   <link rel="stylesheet" href="../css/footer.css">
-  <script src="../js/script.js" defer></script>
+  <script src="../js/header.js" defer></script>
+<script src="../js/footer.js" defer></script>
+<script src="../js/main.js" defer></script>
+
 </head>
 
 <body>
@@ -24,7 +27,7 @@
     </article>
 
     <article class="blog-post">
-      <img src="assets/img/blog/seguridad-castillos.jpg" alt="Seguridad castillos hinchables">
+      <img src="../img/castillos/patrulla.jpg" alt="Seguridad castillos hinchables">
       <h2>🛡️ Seguridad en castillos hinchables</h2>
       <p>Todo lo que debes saber sobre el uso seguro de castillos hinchables para que los más pequeños disfruten sin
         preocupaciones.</p>
@@ -32,14 +35,14 @@
     </article>
 
     <article class="blog-post">
-      <img src="assets/img/blog/fiesta-despedida.jpg" alt="Fiesta despedida de soltero">
+      <img src="../img/castillos/patrulla.jpg" alt="Fiesta despedida de soltero">
       <h2>🥳 Cómo organizar una despedida original</h2>
       <p>Tips y actividades divertidas para hacer de tu despedida de soltero/a un evento inolvidable... ¡con castillo
         incluido!</p>
       <a href="#">Leer más →</a>
     </article>
   </main>
-  
+
 
   <div id="footer"></div>
 
