--- a/assets/html/blog.html
+++ b/assets/html/blog.html
@@ -10,8 +10,7 @@
   <link rel="stylesheet" href="../css/footer.css">
   <script src="../js/header.js" defer></script>
 <script src="../js/footer.js" defer></script>
-<script src="../js/main.js" defer></script>
-
+<script src="../js/script.js" defer></script>
 </head>
 
 <body>
