--- a/index.html
+++ b/index.html
@@ -1,40 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Yupifiestas - Alquiler de Castillos Hinchables</title>
-  <link href="https://fonts.googleapis.com/css?family=Raleway:300,400" rel="stylesheet">
-  <link rel="stylesheet" href="index.css">
-  <script src="assets/js/script.js"></script>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Blog - Yupifiestas</title>
+    <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
+    <script src="assets/js/header.js" defer></script>
+    <script src="assets/js/footer.js" defer></script>
+    <script src="assets/js/script.js" defer></script>
+  </head>
 
 <body>
-  <!-- ======================== ENCABEZADO ======================== -->
-  <header>
-    <div class="header-window">
-      <div class="container-header">
-        <div class="logo-title">
-          <img src="assets/img/logos/logoyupi.jpg" alt="Logo">
-          <h4>Yupifiestas</h4>
-          <label class="icon-menu" id="menu-toggle">☰</label>
-        </div>
-      </div>
-      <nav class="nav">
-        <ul class="nav-links" id="nav-links">
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="#">Castillos</a></li>
-          <li><a href="#packs">Packs</a></li>
-          <li><a href="assets/html/event.html">Eventos</a></li>
-          <li><a href="#contacto">Contacto</a></li>
-          <li><a href="assets/html/blog.html">Blog</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+  <div id="header"></div>
 
-  <!-- ======================== PORTADA CON CARRUSEL ======================== -->
   <div class="container-portada-carrusel">
     <div class="carousel-wrapper">
       <div class="carousel-track">
@@ -160,103 +140,7 @@
 
     </div>
   </div>
-
-
-
-  <!-- ======================== VIDEO PROMOCIONAL ======================== -->
-  <section class="promotionWrapper">
-    <video autoplay muted loop class="video-background">
-      <source src="assets/img/castillos/video_castillo1.mp4" type="video/mp4">
-      Tu navegador no soporta la reproducción de videos.
-    </video>
-    <div class="capa-gradient"></div>
-    <div class="container">
-      <div class="promotionInfo">
-        <h2>¿Necesitas más información?</h2>
-        <p>Consulta todos nuestros precios y ofertas exclusivas para eventos.</p>
-        <a href="#contacto" class="btn btn-primary">Reservanos</a>
-      </div>
-    </div>
-  </section>
-
-  <footer id="contacto" class="footer">
-    <div class="footer-container">
-
-      <!-- Información -->
-      <div class="footer-info">
-        <h3>🎉 Yupifiestas</h3>
-        <p>Alquiler de castillos hinchables para cualquier tipo de evento: cumpleaños, comuniones, despedidas y más.</p>
-        <p>📍 Ciudad, País</p>
-        <p>📧 <a href="mailto:info@yupifiestas.es">info@yupifiestas.es</a></p>
-        <p>📞 <a href="tel:+123456789">+12 345 6789</a></p>
-      </div>
-
-      <!-- Menú -->
-      <div class="footer-links">
-        <h3>Reservas</h3>
-        <ul>
-          <li><a href="#packs">Ver Packs Disponibles</a></li>
-          <li><a href="#castillos">Catálogo de Castillos</a></li>
-          <li><a href="#promociones">Ofertas y Promociones</a></li>
-          <li><a href="#contacto">Atención al Cliente</a></li>
-        </ul>
-      </div>
-
-      <!-- Redes sociales -->
-      <div class="footer-social">
-        <h3>Síguenos</h3>
-        <div class="sharing">
-          <!-- Facebook -->
-          <a href="#" class="sharing-item sharing-facebook" aria-label="Compartir en Facebook">
-            <svg class="i i-facebook" viewBox="0 0 24 24">
-              <path d="M17 14h-3v8h-4v-8H7v-4h3V7a5 5 0 0 1 5-5h3v4h-3q-1 0-1 1v3h4Z"></path>
-            </svg>
-          </a>
-
-          <!-- Twitter -->
-          <a href="#" class="sharing-item sharing-twitter" aria-label="Compartir en Twitter">
-            <svg class="i i-twitter" viewBox="0 0 24 24">
-              <path d="m3 21 7.5-7.5m3-3L21 3M8 3H3l13 18h5Z"></path>
-            </svg>
-          </a>
-
-          <!-- WhatsApp -->
-          <a href="#" class="sharing-item sharing-whatsapp" aria-label="Compartir en WhatsApp">
-            <svg class="i i-whatsapp" viewBox="0 0 24 24">
-              <circle cx="9" cy="9" r="1"></circle>
-              <circle cx="15" cy="15" r="1"></circle>
-              <path d="M8 9a7 7 0 0 0 7 7m-9 5.2A11 11 0 1 0 2.8 18L2 22Z"></path>
-            </svg>
-          </a>
-
-          <!-- Instagram -->
-          <a href="#" class="sharing-item sharing-instagram" aria-label="Compartir en Instagram">
-            <svg class="i i-instagram" viewBox="0 0 24 24">
-              <path
-                d="M7 2C4.24 2 2 4.24 2 7v10c0 2.76 2.24 5 5 5h10c2.76 0 5-2.24 5-5V7c0-2.76-2.24-5-5-5H7zm10 2c1.66 0 3 1.34 3 3v10c0 1.66-1.34 3-3 3H7c-1.66 0-3-1.34-3-3V7c0-1.66 1.34-3 3-3h10zM12 7a5 5 0 1 0 0 10 5 5 0 0 0 0-10zm0 2a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm4.5-2a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z" />
-            </svg>
-          </a>
-
-          <!-- Correo -->
-          <a href="#" class="sharing-item sharing-envelope" aria-label="Compartir por correo">
-            <svg class="i i-envelope" viewBox="0 0 24 24">
-              <rect width="20" height="16" x="2" y="4" rx="2"></rect>
-              <path d="m22 8-10 5L2 8"></path>
-            </svg>
-          </a>
-        </div>
-
-      </div>
-
-    </div>
-
-    <div class="waves"></div>
-
-    <div class="footer-bottom">
-      &copy; 2025 <strong>Yupifiestas</strong> · Todos los derechos reservados
-    </div>
-  </footer>
-
+  <div id="footer"></div>
 </body>
 
 </html>
